fixed overflowing issue

--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -25,6 +25,7 @@ a {
 
 .main {
   min-height: 100%;
+  height: auto;
   @include center();
   font-size: 15px;
 }
